2011-08-01 Fabian Kohn <fabian.kohn@phys.uni-goettingen.de>

	* LikelihoodTopLeptonJets.cxx: Major bugfix in CalculateLorentzVectors().

2011-08-01 Fabian Kohn <fabian.kohn@phys.uni-goettingen.de>

	* Fitter.cxx: Changed vector element access everywhere for consistency (at() -> []).
	* Particles.cxx: Changed vector element access everywhere for consistency (at() -> []).
	* Permutations.cxx: Changed vector element access everywhere for consistency (at() -> []).
	* ResGauss.cxx: Changed vector element access everywhere for consistency (at() -> []).
	* ResolutionBase.cxx: Changed vector element access everywhere for consistency (at() -> []).

2011-08-01 Fabian Kohn <fabian.kohn@phys.uni-goettingen.de>

	* ResDoubleGaussE_1.h: Simplified CheckDoubleGaussianSanity() code (make better use of return value).
	* LikelihoodTopLeptonJets.cxx: Major performance increase for CalculateLorentzVectors() by using static values and removal of unnecessary extra variable assignments.
	* Permutations.cxx: Replaced ->at() methods with [] operator calls at most often called points to improve performance.
	* ResDoubleGaussE_1.cxx: Removed unnecessary assignments and directly return calculation result.
	* ResDoubleGaussE_2.cxx: Removed unnecessary assignments and directly return calculation result.
	* ResDoubleGaussE_3.cxx: Removed unnecessary assignments and directly return calculation result.

2011-07-01 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* ExampleCode.C: example of how to use myFitter->SetET_miss_XY_SumET(Etx, Ety, SumEt)
	* tag KLFitter-00-04-22

2011-06-30 Boris Lemmer <boris.lemmer@phys.uni-goettingen.de>

	* transferfunctions: changing TFs for MET. Now parametrized as function of SumET. Removed all old TFs. Only MC10b supported
	* InterfaceD3PD: add SumET, switch to new MET variables, switch off input branches which are not needed
	* DetectorAtlas_7TeV.cxx: new TFs for MET implemented (Gauss_MET)
	* several classes: SumET added, needed as a MET TF parameter