@@ -1,3 +1,7 @@
+2011-08-08 Johannes Erdmann <johannes.erdmann@cern.ch>
+
+	* InterfaceOutput : adding method to delete all but the best permutation
+
 2011-08-01 Fabian Kohn <fabian.kohn@phys.uni-goettingen.de>
 
 	* LikelihoodTopLeptonJets.cxx: Major bugfix in CalculateLorentzVectors().
